--- a/sample/Makefile
+++ b/sample/Makefile
@@ -14,12 +14,12 @@ endif
 ifeq ($(BIT),64)
 TARGET += test64 bf64 memfunc64 test_util64
 ifeq ($(BOOST_EXIT),1)
-TARGET += calc64
+TARGET += calc64 calc2_64
 endif
 endif
 
 ifeq ($(BOOST_EXIT),1)
-TARGET += calc
+TARGET += calc calc2
 endif
 
 all: $(TARGET)
@@ -38,6 +38,10 @@ calc:
 	g++ $(CFLAGS) calc.cpp -o $@ -m32
 calc64:
 	g++ $(CFLAGS) calc.cpp -o $@ -m64
+#calc2:
+#	g++ $(CFLAGS) calc2.cpp -o $@ -m32
+#calc2_64:
+#	g++ $(CFLAGS) calc2.cpp -o $@ -m64
 
 bf:
 	g++ $(CFLAGS) bf.cpp -o $@ -m32
@@ -67,10 +71,13 @@ test64: test0.cpp $(XBYAK_INC)
 quantize : quantize.cpp $(XBYAK_INC)
 calc : calc.cpp $(XBYAK_INC)
 calc64 : calc.cpp $(XBYAK_INC)
+calc2 : calc2.cpp $(XBYAK_INC)
+calc2_64 : calc2.cpp $(XBYAK_INC)
 bf : bf.cpp $(XBYAK_INC)
 bf64 : bf.cpp $(XBYAK_INC)
 memfunc : memfunc.cpp $(XBYAK_INC)
 memfunc64 : memfunc.cpp $(XBYAK_INC)
 toyvm : toyvm.cpp $(XBYAK_INC)
 test_util : test_util.cpp $(XBYAK_INC) ../xbyak/xbyak_util.h
+test_util2 : test_util.cpp $(XBYAK_INC) ../xbyak/xbyak_util.h
 
