jmp test is only 32bit

--- a/test/Makefile
+++ b/test/Makefile
@@ -2,26 +2,24 @@ TARGET = make_nm normalize_prefix
 XBYAK_INC=../xbyak/xbyak.h
 
 ifeq ($(MODE_BIT),64)
-	XBYAK_OPT=-m64
-	XBYAK_COPT=-DXBYAK64
+	XBYAK_OPT=-m64 -DXBYAK64
 else
-	XBYAK_OPT=-m32
-	XBYAK_COPT=-DXBYAK32
+	XBYAK_OPT=-m32 -DXBYAK32
 endif
 
 all: $(TARGET)
 
 CFLAGS_WARN=-Wall -Wextra -Wformat=2 -Wcast-qual -Wcast-align -Wwrite-strings -Wfloat-equal -Wpointer-arith
 
-CFLAGS=-O2 -fomit-frame-pointer -Wall -fno-operator-names -I../ $(XBYAK_OPT) $(XBYAK_COPT) $(CFLAGS_WARN)
+CFLAGS=-O2 -fomit-frame-pointer -Wall -fno-operator-names -I../ $(CFLAGS_WARN)
 make_nm:
-	$(CXX) $(CFLAGS) make_nm.cpp -o $@
+	$(CXX) $(CFLAGS) $(XBYAK_OPT) make_nm.cpp -o $@
 normalize_prefix: normalize_prefix.cpp
-	$(CXX) $(CFLAGS) normalize_prefix.cpp -o $@
+	$(CXX) $(CFLAGS) $(XBYAK_OPT) normalize_prefix.cpp -o $@
 test_mmx: test_mmx.cpp
-	$(CXX) $(CFLAGS) test_mmx.cpp -o $@ -lpthread
+	$(CXX) $(CFLAGS) $(XBYAK_OPT) test_mmx.cpp -o $@ -lpthread
 jmp: jmp.cpp
-	$(CXX) $(CFLAGS) jmp.cpp -o $@
+	$(CXX) $(CFLAGS) -m32 -DXBYAK32 jmp.cpp -o $@
 
 test: normalize_prefix jmp
 	./test_nm.sh
