difference between CodeGenerator::eax and util::eax

--- a/test/Makefile
+++ b/test/Makefile
@@ -49,7 +49,7 @@ test_avx: normalize_prefix
 clean:
 	rm -rf *.o $(TARGET) lib_run
 
-lib_run: lib_test.cpp lib_run.cpp
+lib_run: lib_test.cpp lib_run.cpp lib.h
 	$(CXX) $(CFLAGS) lib_run.cpp lib_test.cpp -o lib_run
 make_nm: make_nm.cpp $(XBYAK_INC)
 
