unify xbyak_avx512.h

--- a/test/Makefile.win
+++ b/test/Makefile.win
@@ -1,16 +1,14 @@
 OPT=/EHsc -I../xbyak /W4 -D_CRT_SECURE_NO_WARNINGS
-../xbyak/xbyak_mnemonic.h: ../gen/gen_code.exe
+../xbyak/xbyak_mnemonic.h: ../gen/gen_code.exe ../gen/gen_avx512.exe
 	../gen/gen_code.exe > $@
+	../gen/gen_avx512.exe >> $@
 
 ../gen/gen_code.exe: ../gen/gen_code.cpp #../xbyak/xbyak.h
 	cl ../gen/gen_code.cpp $(OPT) /Fe:../gen/gen_code.exe
 
-../xbyak/xbyak_avx512.h: ../gen/gen_avx512.exe
-	../gen/gen_avx512.exe > $@
-
 ../gen/gen_avx512.exe: ../gen/gen_avx512.cpp #../xbyak/xbyak.h
 	cl ../gen/gen_avx512.cpp $(OPT) /Fe:../gen/gen_avx512.exe
 
-SUB_HEADER=../xbyak/xbyak_mnemonic.h ../xbyak/xbyak_avx512.h
+SUB_HEADER=../xbyak/xbyak_mnemonic.h
 
 all: $(SUB_HEADER)
