--- a/test/Makefile
+++ b/test/Makefile
@@ -1,8 +1,17 @@
-TARGET = make_nm normalize_prefix jmp address bad_address misc cvt_test cvt_test32
+TARGET = make_nm normalize_prefix bad_address misc cvt_test cvt_test32
 XBYAK_INC=../xbyak/xbyak.h
+UNAME_S=$(shell uname -s)
 BIT=32
 ifeq ($(shell uname -m),x86_64)
 BIT=64
+endif
+ONLY_64BIT=0
+ifeq ($(UNAME_S),Darwin)
+  # 32-bit binary is not supported
+  ONLY_64BIT=1
+endif
+ifeq ($(ONLY_64BIT),0)
+  TARGET += jmp address
 endif
 
 ifeq ($(BIT),64)
@@ -37,17 +46,19 @@ cvt_test: cvt_test.cpp ../xbyak/xbyak.h
 cvt_test32: cvt_test.cpp ../xbyak/xbyak.h
 	$(CXX) $(CFLAGS) $< -o $@ -DXBYAK32
 
-test_nm: normalize_prefix jmp bad_address $(TARGET)
+test_nm: normalize_prefix $(TARGET)
 	$(MAKE) -C ../gen
+ifneq ($(ONLY_64BIT),1)
 	./test_nm.sh
 	./test_nm.sh Y
 	./test_nm.sh avx512
 	./test_address.sh
 	./jmp
+	./cvt_test32
+endif
 	./bad_address
 	./misc
 	./cvt_test
-	./cvt_test32
 ifeq ($(BIT),64)
 	./test_address.sh 64
 	./test_nm.sh 64
@@ -56,8 +67,10 @@ ifeq ($(BIT),64)
 endif
 
 test_avx: normalize_prefix
+ifneq ($(ONLY_64BIT),0)
 	./test_avx.sh
 	./test_avx.sh Y
+endif
 ifeq ($(BIT),64)
 	./test_address.sh 64
 	./test_avx.sh 64
@@ -65,7 +78,9 @@ ifeq ($(BIT),64)
 endif
 
 test_avx512: normalize_prefix
+ifneq ($(ONLY_64BIT),0)
 	./test_avx512.sh
+endif
 ifeq ($(BIT),64)
 	./test_avx512.sh 64
 endif
