add AVX VNNI instruction support

--- a/gen/Makefile
+++ b/gen/Makefile
@@ -1,5 +1,5 @@
 TARGET=../xbyak/xbyak_mnemonic.h
-BIN=sortline gen_code gen_avx512
+BIN=sortline gen_code gen_avx512 gen_vnni
 CFLAGS=-I../ -O2 -DXBYAK_NO_OP_NAMES -Wall -Wextra -Wno-missing-field-initializers
 all: $(TARGET)
 sortline: sortline.cpp
@@ -7,6 +7,8 @@ sortline: sortline.cpp
 gen_code: gen_code.cpp ../xbyak/xbyak.h avx_type.hpp
 	$(CXX) $(CFLAGS) $< -o $@
 gen_avx512: gen_avx512.cpp ../xbyak/xbyak.h avx_type.hpp
+	$(CXX) $(CFLAGS) $< -o $@
+gen_vnni: gen_vnni.cpp ../xbyak/xbyak.h avx_type.hpp
 	$(CXX) $(CFLAGS) $< -o $@
 
 $(TARGET): $(BIN)
@@ -20,6 +22,11 @@ $(TARGET): $(BIN)
 	echo "#ifdef XBYAK64" >> $@
 	./gen_avx512 64 | ./sortline >> $@
 	echo "#endif" >> $@
+	echo "#endif" >> $@
+	echo "#ifdef XBYAK_DISABLE_AVX512" >> $@
+	./gen_vnni vexOnly | ./sortline >> $@
+	echo "#else" >> $@
+	./gen_vnni | ./sortline >> $@
 	echo "#endif" >> $@
 
 clean:
