--- a/cmake/meson-config.cmake.in
+++ b/cmake/meson-config.cmake.in
@@ -3,6 +3,6 @@
 if(NOT TARGET @TARGET_NAME@)
 	add_library(@TARGET_NAME@ INTERFACE IMPORTED)
 	set_target_properties(@TARGET_NAME@ PROPERTIES
-		INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_LIST_FILE}/include"
+		INTERFACE_INCLUDE_DIRECTORIES "@ABSOLUTE_INCLUDE_DIR@"
 	)
 endif()
