build(make): honour CXXFLAGS, CPPFLAGS and LDFLAGS
It is currently impossible to pass custom flags to the makefiles using
environment variables, because they ignore the predefined macros
CXXFLAGS, CPPFLAGS and LDFLAGS.

Passing LDFLAGS is defined in the Posix standard
(https://pubs.opengroup.org/onlinepubs/9699919799/utilities/make.html#tag_20_76_13_09),
while the CXXFLAGS and CPPFLAGS variables are predefined in GNU Make
(https://www.gnu.org/software/make/manual/html_node/Implicit-Variables.html#Implicit-Variables).

--- a/sample/Makefile
+++ b/sample/Makefile
@@ -51,7 +51,7 @@ all: $(TARGET)
 
 CFLAGS_WARN=-Wall -Wextra -Wformat=2 -Wcast-qual -Wcast-align -Wwrite-strings -Wfloat-equal -Wpointer-arith #-pedantic
 
-CFLAGS=-g -O2 -fomit-frame-pointer -Wall -I../ $(CFLAGS_WARN)
+CFLAGS=-g -O2 -fomit-frame-pointer -Wall -I../ $(CFLAGS_WARN) $(CXXFLAGS) $(CPPFLAGS) $(LDFLAGS)
 
 test:
 	$(CXX) $(CFLAGS) test0.cpp -o $@ -m32
