--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,5 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - run: sudo apt update
     - run: sudo apt install nasm yasm g++-multilib tcsh
     - run: make test
