disable some tests on x32

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,9 @@
 TARGET = make_nm normalize_prefix bad_address misc cvt_test cvt_test32 noexception misc32
 XBYAK_INC=../xbyak/xbyak.h
 UNAME_S=$(shell uname -s)
+ifeq ($(shell dpkg --print-architecture),x32)
+X32=1
+endif
 BIT=32
 ifeq ($(shell uname -m),x86_64)
 BIT=64
@@ -68,8 +71,10 @@ endif
 	./cvt_test
 ifeq ($(BIT),64)
 	./test_address.sh 64
+ifneq ($(X32),1)
 	./test_nm.sh 64
 	./test_nm.sh Y64
+endif
 	./jmp64
 endif
 
@@ -79,9 +84,10 @@ ifneq ($(ONLY_64BIT),0)
 	./test_avx.sh Y
 endif
 ifeq ($(BIT),64)
-	./test_address.sh 64
 	./test_avx.sh 64
+ifneq ($(X32),1)
 	./test_avx.sh Y64
+endif
 endif
 
 test_avx512: normalize_prefix
@@ -89,7 +95,9 @@ ifneq ($(ONLY_64BIT),0)
 	./test_avx512.sh
 endif
 ifeq ($(BIT),64)
+ifneq ($(X32),1)
 	./test_avx512.sh 64
+endif
 endif
 
 test:
@@ -103,5 +111,4 @@ clean:
 lib_run: lib_test.cpp lib_run.cpp lib.h
 	$(CXX) $(CFLAGS) lib_run.cpp lib_test.cpp -o lib_run
 make_nm: make_nm.cpp $(XBYAK_INC)
-
 
